# A-3D-Biomedical-Segmentation-Hub

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README-Contents.md  README.md  pyproject.toml
basics/: README.md
depracted/: Docker Workflow  Dockerfile_v2  Synchrotron data.md
notebooks/: 1) Crop the image.md  WUP1.ipynb  WUP2.ipynb  WUP3.ipynb  test.ipynb
papers/: .xdp-qt_temp.ICEmou-kEM3tj  .xdp-qt_temp.WlKusF-U7qjMr  .xdp-qt_temp.jimYSo-DvSJpI
reports/: README.md
reports/ScribblePrompt/: README.md
scripts/: convert.py  helper_functions.py  preprocessing.py  testy.py  wup_analysis.py
