[tool.poetry]
name = "rk-ess"
version = "0.1.0"
description = "Codebase and research results for interactive and semiautomatic 3D segmetnation models"
authors = ["David Anthony Parham <david.parham@alexandra.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
mypy = "^1.4.0"
codespell = "^2.2.5"
auto-walrus = "^0.2.2"
unimport = "^0.16.0"
libcst = "^0.3.7"
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[[tool.mypy.overrides]]
module = "firstmodule.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = [
    "E",   # pydocstyle
    "F",   # flake8
    "B",   # flake8-bugbear
    "W",   # pydocstyle
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "PL",  # pylint
    "NPY", # Numpy rules
    "RUF", # RUF rules
    "I",   # Isort
]
ignore = [
    "D202",
    "E402",
    "E203",
    "PLR2004",
    "D100",
    "B018"
]

[tool.ruff.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.unimport]
sources = ["path1", "path2"]
exclude = '__init__.py|tests/'
include = 'test|test2|tests.py'
gitignore = true
remove = false
check = true
diff = true
include_star_import = true
ignore_init = true