[tool.poetry]
name = "rk-ess"
version = "0.1.0"
description = "Codebase and research results for interactive and semiautomatic 3D segmetnation models"
authors = ["David Anthony Parham <david.parham@alexandra.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
addict = "2.4.0"
dash = "2.6.2"
huggingface-hub = "0.14.1"
imageio = "2.22.2"
lpips = "0.1.4"
matplotlib = "3.7.1"
numpy = "1.23.5"
opencv-python = "4.6.0.66"
pillow = "9.2.0"
plotly = "5.10.0"
pycocotools = "2.0.5"
pyyaml = "6.0"
scikit-image = "0.19.3"
scipy = "1.10.0"
segment-anything = "1.0"
setuptools = "65.5.1"
supervision = "0.6.0"
timm = "0.6.13"
tqdm = "4.64.1"
transformers = "4.29.1"
yapf = "0.32.0"
ninja = "^1.11.1"
pandas = "^2.1.1"
vtk = "^9.2.6"
scikit-learn = "^1.3.1"
pyvista = "^0.42.3"
h5py = "^3.10.0"
trame = "^3.2.7"
trame-vuetify = "^2.3.1"
trame-vtk = "^2.5.9"
ipywidgets = "^8.1.1"
opencv-contrib-python = "^4.8.1.78"
arrow = "^1.3.0"
tifffile = "^2023.12.9"
git-filter-repo = "^2.38.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
mypy = "^1.4.0"
codespell = "^2.2.5"
auto-walrus = "^0.2.2"
unimport = "^0.16.0"
libcst = "^0.3.7"
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[[tool.mypy.overrides]]
module = "firstmodule.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = [
    "E",   # pydocstyle
    "F",   # flake8
    "B",   # flake8-bugbear
    "W",   # pydocstyle
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "PL",  # pylint
    "NPY", # Numpy rules
    "RUF", # RUF rules
    "I",   # Isort
]
ignore = [
    "D202",
    "E402",
    "E203",
    "PLR2004",
    "D100",
    "B018"
]

[tool.ruff.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.unimport]
sources = ["path1", "path2"]
exclude = '__init__.py|tests/'
include = 'test|test2|tests.py'
gitignore = true
remove = false
check = true
diff = true
include_star_import = true
ignore_init = true